--- a/grid.css
+++ b/grid.css
@@ -3,24 +3,32 @@ body{
   grid-template-columns: repeat(9, 1fr);
   grid-gap: 10px;
   grid-auto-rows: minmax(100px, auto);
+  
 }
 
 header{
-grid-column: 1 / -1;
+  grid-column: 1 / -1;
 }
 
 nav{
-grid-column: 1 / 3;
+  grid-column: 1 / 3;
 }
 
 section{
-grid-column: 3 / 7;
+  grid-column: 3 / -4;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(100px, auto);
+}
+
+section > h2{
+  grid-column: 1 / -1;
 }
 
 aside{
-grid-column: 7 / -1;
+  grid-column: 7 / -1;
 }
 
 footer{
-grid-column: 1 / -1;
+  grid-column: 1 / -1;
 }
